--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,6 +1,6 @@
 <header>
-    <a href="/">Weather</a>  
-    <a href="/about">About</a>
-    <a href="/help">Help</a>
+    <a href="/">WEATHER</a>  
+    <a href="/about">ABOUT</a>
+    <a href="/help">HELP</a>
 
 </header>
