--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
+  <p>Just search what ever you want</p>
   <div class="main-content">
       {{>header}}
       <h3> {{errorMeassage}}</h3>
