--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,7 +11,7 @@
 <body>
   <div class="main-content">
     <header>
-      <h1>Weather</h1>
+      <h1>WEATHER</h1>
       {{> header}}
     </header>
     
