--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="main-content">
-      <h1>About</h1>
+      <h1>ABOUT</h1>
      {{>header}}
       <img class="portriate" src="/img/file.png" alt="Weather Image">
     </div>
