--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div>
-        <h1>Help</h1>
+        <h1>HELP</h1>
       {{>header}} 
     <p><h4>Created by {{name}}</h4></p>
     <p>{{message}}</p>
